[package]
name = "workflow-http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-http"
keywords = ["http"]
categories = ["web-programming::http-server"]
exclude = ["/.*", "/test"]
description = """
Tide HTTP server with custom router for Workflow-UX applications
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tide = "0.16.0"
regex = "1.5.5"
async-trait = "0.1.57"
serde_json = "1.0.83"
deser-hjson = "1.0.2"
serde = "1.0.143"
base64 = "0.13.0"
thiserror = "1.0.32"
